# path_finder

./: .gitignore  CMakeLists.txt  README.md
shaders/: square.frag  square.vert
src/: a_star.cpp  a_star.hpp  common.cpp  common.hpp  engine.cpp  engine.hpp  glad.c  grid.cpp  grid.hpp  main.cpp  shader.cpp  shader.hpp  square.cpp  square.hpp  square_renderer.cpp  square_renderer.hpp
